# parser-factory

./: CMakeLists.txt  README.md  build_my_project.sh
scripts/: plot.py  run.sh
src/: BinParser.cpp  BinParser.hpp  JsonParser.cpp  JsonParser.hpp  Parser.cpp  Parser.hpp  TxtParser.cpp  TxtParser.hpp  main.cpp
